--- a/apps/frontend/storefront/package.json
+++ b/apps/frontend/storefront/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "next": "15.1.3",
+    "@repo/ui": "1.0.0",
+    "@repo/utils": "1.0.0"
   },
   "devDependencies": {
     "typescript": "^5",
