--- a/apps/backend/api/package.json
+++ b/apps/backend/api/package.json
@@ -11,5 +11,8 @@
   "description": "",
   "dependencies": {
     "express": "^5.0.1"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0"
   }
 }
